###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

module(
    name = "miniaudio",
    version = "1.0.0",
    repo_name = "AdaEngine"
)

bazel_dep(name = "rules_swift", version = "1.16.0", repo_name = "build_bazel_rules_swift")